# ChangeLog for dev-libs/boost
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/boost/ChangeLog,v 1.157 2009/05/13 19:11:47 dev-zero Exp $

  13 May 2009; Tiziano Müller <dev-zero@gentoo.org> boost-1.35.0-r5.ebuild,
  boost-1.36.0-r1.ebuild, boost-1.37.0-r1.ebuild:
  Changed openmpi dep again to openmpi[cxx]. Changed eselect use flag to
  +eselect (bug #269517). Changed elog to einfo (bug #269509).

  11 May 2009; Tiziano Müller <dev-zero@gentoo.org>
  -boost-1.35.0-r4.ebuild, boost-1.35.0-r5.ebuild, -boost-1.36.0.ebuild,
  boost-1.36.0-r1.ebuild, -boost-1.37.0.ebuild, boost-1.37.0-r1.ebuild:
  Changed mpi dependency to openmpi only (bug #267818, thanks to Łukasz
  Michalik for the analysis). Dropped old revisions.

  14 Apr 2009; Brent Baude <ranger@gentoo.org> boost-1.35.0-r2.ebuild:
  Marking boost-1.35.0-r2 ppc64 for bug 245192

  14 Apr 2009; Tiziano Müller <dev-zero@gentoo.org> boost-1.37.0-r1.ebuild:
  Correct non-mt symlink creation for debug libs (bug #256697)

*boost-1.37.0-r1 (07 Apr 2009)
*boost-1.36.0-r1 (07 Apr 2009)
*boost-1.35.0-r5 (07 Apr 2009)

  07 Apr 2009; Tiziano Müller <dev-zero@gentoo.org>
  +files/1.35-remove-hardlink-creation.patch, +files/buildid-fix.patch,
  +boost-1.35.0-r5.ebuild, +boost-1.36.0-r1.ebuild, +boost-1.37.0-r1.ebuild:
  Slotting revisited: using profile files now. Solved bugs #259167, #258926.

  04 Apr 2009; Raúl Porcel <armin76@gentoo.org> boost-1.35.0-r2.ebuild:
  alpha/ia64 stable wrt #245192

  04 Apr 2009; Markus Meier <maekke@gentoo.org> boost-1.35.0-r2.ebuild:
  x86 stable, bug #245192

  02 Apr 2009; Friedrich Oslage <bluebird@gentoo.org>
  boost-1.35.0-r2.ebuild:
  Stable on sparc, bug #245192

  01 Apr 2009; Joseph Jezak <josejx@gentoo.org> boost-1.35.0-r2.ebuild:
  Marked ppc stable for bug #245192.

  25 Mar 2009; Ryan Hill <dirtyepic@gentoo.org> boost-1.35.0-r2.ebuild:
  Fix testsuite processing for paludis users.
