@@ -1,6 +1,14 @@
 # ChangeLog for dev-libs/boost
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/boost/ChangeLog,v 1.157 2009/05/13 19:11:47 dev-zero Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/boost/ChangeLog,v 1.159 2009/05/15 14:50:06 armin76 Exp $
+
+  15 May 2009; Raúl Porcel <armin76@gentoo.org> boost-1.35.0-r2.ebuild:
+  arm/s390/sh stable wrt #245192
+
+  15 May 2009; Tiziano Müller <dev-zero@gentoo.org> boost-1.35.0-r5.ebuild,
+  boost-1.36.0-r1.ebuild, boost-1.37.0-r1.ebuild:
+  Changed openmpi dep again to allow stable versions of openmpi satisfying
+  it (since they have nocxx instead of cxx USE flag, bug #269926).
 
   13 May 2009; Tiziano Müller <dev-zero@gentoo.org> boost-1.35.0-r5.ebuild,
   boost-1.36.0-r1.ebuild, boost-1.37.0-r1.ebuild:
